--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
 REACT_APP_BACKEND_API = "https://social-blog-cs.herokuapp.com/api"
+
+
+REACT_APP_CLOUDINARY_CLOUD_NAME = "dqpygpxb7"
+REACT_APP_CLOUDINARY_PRESET = "uddjxmxn"
